kubernetes/apps/documenso/documenso/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: documenso
  namespace: documenso
spec:
  selector:
    app: documenso
  ports:
    - port: 3000
      targetPort: 3000
