kubernetes/apps/documenso/documenso/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: documenso
  namespace: documenso
spec:
  podSelector:
    matchLabels:
      app: documenso
  policyTypes: [Ingress, Egress]
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ingress-nginx
      ports:
        - port: 3000
  egress:
    - ports:
        - port: 5432
      to:
        - podSelector:
            matchLabels:
              app: postgres
    - ports:
        - { port: 53, protocol: UDP }
        - { port: 53, protocol: TCP }
      to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
    - ports:
        - port: 443
        - port: 80
        - port: 587
      to:
        - ipBlock:
            cidr: 0.0.0.0/0
